--- a/Swift3/scratchy/scratchy/Second.storyboard
+++ b/Swift3/scratchy/scratchy/Second.storyboard
@@ -72,6 +72,36 @@
             </objects>
             <point key="canvasLocation" x="50" y="-260"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="CyF-uq-Yhu">
+            <objects>
+                <viewController id="8es-ov-nYg" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dTT-ck-9By"/>
+                        <viewControllerLayoutGuide type="bottom" id="GPs-ZM-enn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lj5-0a-B49">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="Smy-Z1-yT3">
+                                <rect key="frame" x="66" y="124" width="179" height="170"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">test
+Checked
+line</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5D4-Xi-ODv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1012" y="-378.26086956521743"/>
+        </scene>
         <!--Spread Views View Controller-->
         <scene sceneID="Qum-e9-fhF">
             <objects>
@@ -153,7 +183,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ud4-Zh-462" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-855" y="-259"/>
+            <point key="canvasLocation" x="-855.20000000000005" y="-259.52023988005999"/>
         </scene>
     </scenes>
 </document>
